2011-12-15  Juri Linkov  <juri@jurta.org>

	* mm-decode.el (mm-inline-media-tests): Add missing
	`mm-handle-media-subtype'.

2011-12-14  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-group.el (gnus-group-tool-bar):
	* gnus-sum.el (gnus-summary-tool-bar):
	* message.el (message-tool-bar):
	* rfc2231.el (rfc2231-parse-string): Spelling fix.

2011-12-12  Paul Eggert  <eggert@cs.ucla.edu>

	* plstore.el (plstore--insert-buffer): Spelling fix.

2011-12-09  Tassilo Horn  <tassilo@member.fsf.org>

	* message.el (message-valid-fqdn-regexp): Update with newly approved
	top-level domain names ".tel" and ".asia".

2011-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-article): Don't load shr
	unconditionally.

2011-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-pop-to-buffer): Use pop-to-buffer instead of
	pop-to-buffer-same-window for old Emacsen.

2011-12-06  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-sum.el (gnus-summary-make-tool-bar): Fix typo.

2011-12-05  Paul Eggert  <eggert@cs.ucla.edu>

	* netrc.el (netrc-credentials): Spelling fix.

2011-12-04  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-fun.el (gnus-fun-ppm-change-string):
	* gnus-msg.el (gnus-inews-do-gcc):
	* gnus-sum.el (gnus-summary-find-for-reselect):
	* gnus.el (gnus-summary-cancelled):
	* message.el (message-cancel-hook, message-send-news):
	* nndiary.el (nndiary-headers, nndiary-parse-schedule-value):
	* nnir.el (nnir-run-hyrex):
	* nntp.el (nntp-with-open-group-function):
	* pgg.el (pgg-pending-timers): Spelling fix.

2011-12-04  Chong Yidong  <cyd@gnu.org>

	* message.el (message-pop-to-buffer): Partially revert 2011-11-30
	change (Bug#10200).

2011-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface):
	* gnus-art.el (gnus-article-x-face-command): Update the header format
	of icon data for the most recent icontopbm program.

2011-12-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-inews-do-gcc):